--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 <h1>Hello World!</h1>
+
+<form action="/action_page.php">
+  <input type="file" id="myFile" name="filename">
+  <input type="submit">
+</form>
