--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
+
 <h1>Hello World!</h1>
 
 <form action="/action_page.php">
